css/styles.css
@import "@material/list/mdc-list";
@import "@material/menu-surface/mdc-menu-surface";
@import "@material/menu/mdc-menu";
@import "@material/select/mdc-select";
* {
  font: Verdana, Arial, 'sans-serif' !important;/* <-- fonts */
}

.demo-width-class {
  width: 400px;
}
#calendar-card {
  float:left;
  width: 400px;
  margin-top: 150px;
  padding-bottom: 100;
}
.calendar {
  float: right;
  padding-top: 150px;
  text-align: center;
}

.actions {
  text-align: right;
}

#add-item {
  float: right;
}

.mdc-card {
  /* width: 500px; */
}
.mdc-data-table {
    margin-top: 200px;
}

/* The Modal (background) */
.modal {
    display: none; /* Hidden by default */
    position: fixed; /* Stay in place */
    z-index: 1; /* Sit on top */
    left: 0;
    top: 0;
    width: 100%; /* Full width */
    height: 100%; /* Full height */
    overflow: auto; /* Enable scroll if needed */
    background-color: rgb(0,0,0); /* Fallback color */
    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
  }
  
  /* Modal Content/Box */
  .modal-content {
    background-color: #fefefe;
    margin: 15% auto; /* 15% from the top and centered */
    padding: 20px;
    border: 1px solid #888;
    width: 80%; /* Could be more or less, depending on screen size */
  }
  
  /* The Close Button */
  .close {
    color: #aaa;
    float: right;
    font-size: 28px;
    font-weight: bold;
  }
  
  .close:hover,
  .close:focus {
    color: black;
    text-decoration: none;
    cursor: pointer;
  }

